Preventing custom title behavior on smaller screen sizes to prevent design conflicts

--- a/sites/all/themes/eshell/styles/scss/components/_mixins.scss
+++ b/sites/all/themes/eshell/styles/scss/components/_mixins.scss
@@ -45,40 +45,39 @@
 
 // Custom title behavior
 @mixin title{
-  font-weight: 900;
-  font-size: 2.5vw;
-  text-transform: uppercase;
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
-  line-height: 1;
-  z-index: 10;
-  vertical-align: bottom;
-  &:before{
-    content: '';
-    position: absolute;
-    bottom: .45em;
-    left: 0;
-    z-index: -1;
-    width: 105%;
-    height: 3px;
-    background: $midnight;
-    transition: transform 0.2s cubic-bezier(0.5, 0, 0, 1);
-    transform: scaleY(1) translateX(-105%);
-  }
-  &:after{
-    content: '';
-    position: absolute;
-    bottom: .45em;
-    left: 0;
-    z-index: -2;
-    width: 105%;
-    height: 3px;
-    background: transparent;
-  }
-  &:hover:before,
-  &:focus:before{
-    transform: scaleY(1) translateX(0);
+  @media #{$xlarge-up}{
+    font-weight: 900;
+    font-size: 2.5vw;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    line-height: 1;
+    z-index: 10;
+    vertical-align: bottom;
+    &:before{
+      content: '';
+      position: absolute;
+      bottom: .45em;
+      left: 0;
+      width: 105%;
+      height: 3px;
+      background: $midnight;
+      transition: transform 0.2s cubic-bezier(0.5, 0, 0, 1);
+      transform: scaleY(1) translateX(-105%);
+    }
+    &:after{
+      content: '';
+      position: absolute;
+      bottom: .45em;
+      left: 0;
+      width: 105%;
+      height: 3px;
+      background: transparent;
+    }
+    &:hover:before,
+    &:focus:before{
+      transform: scaleY(1) translateX(0);
+    }
   }
 }
 
@@ -131,7 +130,6 @@
     position: absolute;
     bottom: 5px;
     left: 0;
-    z-index: -1;
     width: 105%;
     height: 2px;
     background: $midnight;
@@ -143,7 +141,6 @@
     position: absolute;
     bottom: 5px;
     left: 0;
-    z-index: -2;
     width: 105%;
     height: 2px;
     background: transparent;
